[package]
name = "bati-lib"
version = "0.1.0"
authors = ["rahuahua <rahuahua@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = {version = "1.0.55", features = ["raw_value"]}
serde = { version = "1.0.113", features = ["derive"] }
rust-ini = "0.16.0"
reqwest = { version = "0.11.2"}
rand = "0.7"
bytes = { version = "1", features = ["serde"] }
futures = "0.3"
env_logger = "0.8"
md5 = "0.7.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rdkafka = "0.28.0"
log = "0.4.14"
base64 = "0.13"
local_ipaddress = "0.1.3"
ntex = { version = "0.5.15", features = ["tokio"] }