[package]
name = "bati"
version = "0.1.0"
authors = ["rahuahua <rahuahua@gmail.com>"]
edition = "2018"

[profile.release]
panic = "abort"

[dependencies]
ntex = { version = "0.5", features = ["tokio"] }
serde_json = {version = "1.0.55", features = ["raw_value"]}
serde = { version = "1.0.113", features = ["derive"] }
rust-ini = "0.16.0"
flate2 = {version ="1.0", features = ["zlib-ng-compat"], default-features = false}
rand = "0.7"
futures = "0.3"
env_logger = "0.8"
md5 = "0.7.0"
uuid = "0.8"
clap = { version = "3.0.14", features = ["derive"] }
num_cpus = "1.13.0"
bati-lib = {path= "../bati-lib" }
log = "0.4.14"
reqwest = { version = "0.11.2", features = ["json"]}
log4rs = {version ="1", features = ["config_parsing"]}
prometheus-static-metric = "0.5"
prometheus = "0.13"
lazy_static = "1.4.0"
page_size = "0.4.2"
serde_yaml = "0.8"
zstd = "0.10"

